--- a/test/t01.html
+++ b/test/t01.html
@@ -10,18 +10,27 @@
 </head>
 
 <body>
-    <ol>
-        <!-- 创建一个 todo-item 组件的实例 -->
-        <todo-item></todo-item>
-    </ol>
+    <div id="app-7">
+        <ol>
+            <todo-item v-for="item in groceryList" v-bind:todo="item" v-bind:key="item.id"></todo-item>
+        </ol>
+    </div>
 </body>
 <script type="text/javascript">
 Vue.component('todo-item', {
-    // todo-item 组件现在接受一个
-    // "prop"，类似于一个自定义属性
-    // 这个属性名为 todo。
     props: ['todo'],
-    template: '<li>{{ todo.text }}</li>'
+    template: '<div>{{todo.id + ":"+ todo.text }}</div>'
+})
+
+var app7 = new Vue({
+    el: '#app-7',
+    data: {
+        groceryList: [
+            { id: 0, text: '蔬菜' },
+            { id: 1, text: '奶酪' },
+            { id: 2, text: '随便其他什么人吃的东西' }
+        ]
+    }
 })
 </script>
 
