--- a/test/t04.html
+++ b/test/t04.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>vue.js实现双向绑定的原始方法</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <script src="../js/jquery.js" type="text/javascript"></script>
     <!-- <script src="../js/vue.js" type="text/javascript"></script> -->
